# smartcar

code_test/: README.md  requirements-race.txt  start_race.sh
code_test/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
code_test/install/test_carcontrol/share/test_carcontrol/: package.bash  package.dsv  package.ps1  package.sh  package.xml
code_test/install/test_carcontrol/share/test_carcontrol/config/: config_car_keyboard.yaml  config_image_compress.yaml  config_new_resnet.yaml  config_new_yolo_d.yaml  config_videologger.yaml  config_yolo_plan.yaml  detect.caffemodel  detect.prototxt  sr.caffemodel  sr.prototxt
code_test/install/test_carcontrol/share/test_carcontrol/launch/: race_bringup.launch.py  race_with_origincar.launch.py
code_test/log/: latest_build
code_test/log/new_resnet/: resnet_log_0506_205651.txt  resnet_log_0508_151114.txt  resnet_log_0508_151153.txt  resnet_log_0508_151343.txt  resnet_log_0508_152227.txt  resnet_log_0508_153646.txt  resnet_log_0508_162253.txt  resnet_log_0508_164301.txt  resnet_log_0508_164344.txt  resnet_log_0508_165434.txt  resnet_log_0508_174156.txt  resnet_log_0513_160331.txt  resnet_log_0513_164502.txt  resnet_log_0515_104729.txt  resnet_log_0515_104919.txt
code_test/log/new_yolo/: log_0506_205812.txt  log_0506_210808.txt  log_0506_210854.txt  log_0508_151343.txt  log_0508_152227.txt  log_0508_153646.txt  log_0508_154215.txt  log_0508_154343.txt  log_0508_154433.txt  log_0508_155934.txt  log_0508_162251.txt  log_0508_163607.txt  log_0508_164301.txt  log_0508_164344.txt  log_0508_165412.txt  log_0508_165538.txt  log_0508_171503.txt  log_0508_174237.txt  log_0513_160316.txt  log_0513_164543.txt  log_0513_171434.txt  log_0515_105018.txt
code_test/src/: README.md
code_test/src/test_node/: setup.py
config/: my_classes.list  yolov3workconfig.json  yolov8workconfig.json
dev_ws/: rosbridge_websocket_smoke_test.html
dev_ws/config/: yolov10workconfig.json  yolov5x_car_workconfig.json  yolov5xworkconfig.json  yolov8_car_classes.list  yolov8_car_workconfig.json
dev_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
dev_ws/log/: latest_build  latest_list
dev_ws/src/origincar/utils/: CMakeLists.txt  package.xml
dev_ws/src/origincar/utils/src/: image_transport_node.cpp
(+443 files in other folders)
