<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>test_carcontrol</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1226843690@qq.com">long</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>ai_msgs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>origincar_base</exec_depend>
  <exec_depend>origincar_msg</exec_depend>
  <exec_depend>python3-requests</exec_depend>
  <exec_depend>python3-shapely</exec_depend>
  <exec_depend>python3-pyzbar</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>test_interface</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
